--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "date-fns": "^2.24.0"
   }
 }
